# Abel-Arm

./: .gitignore  App.tsx  FIRMWARE.md  README.md  REGRESSION_TESTS.md  SECURITY.md  VOICE_COMMANDS.md  VOICE_CONTROL.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  test_voice_control.js  types.ts
abel-voice-cli/: .env.example  CALIBRATION.md  Cargo.toml  README.md
abel-voice-cli/src/: audio.rs  deepgram.rs  executor.rs  gemini.rs  main.rs  server.rs  whisper.rs
components/: AbelFace.tsx  ControlPanel.tsx  HelpModal.tsx
firmware/: Abel_Arm_Firmware.ino
hooks/: useAbel.ts
services/: serialService.ts  voiceService.ts
