[package]
name = "abel-voice"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
async-trait = "0.1"
hound = "3.5"
cpal = "0.15"
base64 = "0.21"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5.0"
actix-web = "4.4"
actix-cors = "0.7"
actix-multipart = "0.6"
futures-util = "0.3"
tempfile = "3.8"
